Correct tags right alignement for Chrome

--- a/style/base.css
+++ b/style/base.css
@@ -88,7 +88,7 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .jp-enh-cell-tags .tag {
